@startuml
'https://plantuml.com/class-diagram
!include style.puml

skinparam class {
    FontColor white
    StereotypeFontColor white
    BorderColor transparent
    ArrowColor LOGIC_COLOR
}

class Parser << Interface >> LOGIC_COLOR
class Command LOGIC_COLOR
class AddPositionCommandParser LOGIC_COLOR
class AddPositionCommand LOGIC_COLOR

skinparam shadowing false

Parser <|.. AddPositionCommandParser
Command <|-- AddPositionCommand

hide methods
hide fields
hide circle

@enduml